k8s/overlays/dev/nextcloud-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  template:
    spec:
      containers:
        - name: nextcloud
