k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
spec:
  tls:
    - hosts:
        - dev.34-200-119-27.nip.io
      secretName: nextcloud-tls
  rules:
    - host: dev.34-200-119-27.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
